# SimPan

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
simpan/: manage.py
simpan/MotionDiffuse/datasets/: dataloader.py
simpan/MotionDiffuse/tools/: evaluation.py
simpan/MotionDiffuse/trainers/: ddpm_trainer.py
simpan/MotionDiffuse/utils/: plot_script.py
simpan/account/: serializers.py  urls.py  views.py
simpan/account/api/v1/: views.py
simpan/base/: validators.py
simpan/comfychat/: __init__.py  apps.py  decorators.py  urls.py  validators.py  views.py
simpan/comfychat/templatetags/: json_filter.py
simpan/comfyui/: __init__.py  admin.py  apps.py  constants.py  models.py  urls.py  utils.py  views.py
simpan/comfyui/migrations/: 0001_initial.py
simpan/db/: admin.py  apps.py  models.py  signals.py  utils.py
simpan/db/migrations/: 0001_initial.py
simpan/home/: urls.py  views.py
simpan/pipeline/utils/: carla.py
simpan/services/: serializers.py  urls.py  validators.py  views.py
simpan/services/management/commands/: collectlitegraph.py  collectpdf.py
simpan/simpan/: asgi.py  celery.py  settings.py  urls.py  validator.py  wsgi.py
simpan/static/css/: base.css  comfychat.css  comfyui.css  home.css  login.css
simpan/static/js/: comfychat.js  comfyui.js  node.js  pdf.mjs  pdf.mjs.map  pdf.sandbox.mjs  pdf.sandbox.mjs.map  pdf.worker.mjs  utils.js
simpan/templates/: 500.html  base.html
simpan/templates/account/: login.html
simpan/templates/comfychat/: comfychat.html
simpan/templates/comfyui/: comfyui.html
simpan/templates/home/: home.html
simpan/workspace/: admin.py  apps.py  models.py  serializers.py  signals.py  utils.py
simpan/workspace/api/v1/: serializers.py  views.py
simpan/workspace/migrations/: 0001_initial.py
workers/: __init__.py  sdc.py  sdc_config.py  validators.py
workers/tasks/: sdc_task.py
